# STAG-Information-Model

./: .clang-tidy  .gitignore  .gitlab-ci-templates.yml  .gitlab-ci.yml  .hspt-cpp  .project  .valgrind_targets.json  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  CONTRIBUTING.md  Doxyfile  InfoModel.code-workspace  NOTICE  OPC-UA.sln  README.md  ci-variables.yml  conanfile.py  conanfile.txt  device.cpp  run_valgrind.sh  valgrind.supp
OPC-UA/: InformationModelTest.cpp  InformationModelTest.h  OPC-UA-Test.cpp  OPC-UA.vcxproj  OPC-UA.vcxproj.filters
OPC-UA-TEST/: BlueprintTests.cpp  BlueprintTests.h  ConsumerAdapterTests.cpp  ConsumerAdapterTests.h  DeviceUnitTests.cpp  OPC-UA-TEST.vcxproj  cpp.hint  packages.config  test.cpp
OPC-UA/OPCUA-Modeller/: blueprint.h  device.cpp  device.h  deviceElement.cpp  deviceElement.h  deviceElementGroup.cpp  deviceElementGroup.h  deviceFunction.cpp  deviceFunction.h  deviceFunctionParameter.cpp  deviceFunctionParameter.h  deviceMetric.cpp  deviceMetric.h  informationModelExceptions.cpp  informationModelExceptions.h  namedElement.cpp  namedElement.h  observableMetric.cpp  opcua_modeller.hpp  valueDataType.cpp  writeableMetric.cpp
cmake/: compiler_settings.cmake  conan.cmake  dependencies.cmake  macros.cmake
conan/: conanfile.py
conan/test_package/: example.cpp  loggerConfig.json
docs/code_documentation/: 1_main.md  2_class_diagram.md  3_device_composition.md  4_device_builder.md  4_naming_conventions.md  5_handling_exceptions.md  5_naming_conventions.md  header.html  main.md  stylesheet.css
docs/doxygen-awesome-css/: custom.css  doxygen-awesome.css
docs/manual/: 2_class_diagram.md  3_device_composition.md  4_naming_conventions.md  5_handling_exceptions.md
includes/: Callable.hpp  DataVariant.hpp  Device.hpp  DeviceBuilderInterface.hpp  DeviceElement.hpp  DeviceElementGroup.hpp  Element.hpp  Function.hpp  Group.hpp  MetaInfo.hpp  Metric.hpp  NamedElement.hpp  Observable.hpp  ObservableMetric.hpp  Readable.hpp  WritableMetric.hpp
includes/Information_Model/: DataType.hpp  Device.hpp  DeviceElement.hpp  DeviceElementGroup.hpp  DeviceElementGroupImpl.hpp  DeviceElementGroup_MOCK.hpp  DeviceElement_FAKE.hpp  Device_MOCK.hpp  Metric.hpp  Metric_FAKE.hpp  NamedElement.hpp  ReadableMetric.hpp  ReadableMetric_FAKE.hpp  WritableMetric.hpp  WritableMetric_FAKE.hpp  WriteableMetric.hpp  iDevice.hpp  iDeviceElement.hpp  iDeviceElementGroup.hpp  iNamedElement.hpp  informationModelExceptions.hpp
includes/Interface/: Callable.hpp  DataVariant.hpp  Device.hpp  DeviceBuilder.hpp  Element.hpp  Group.hpp  MetaInfo.hpp  Observable.hpp  Readable.hpp  Writable.hpp
includes/Mocks/: CallableMock.hpp  DeviceMock.hpp  ElementMock.hpp  ExecutorMock.hpp  FakeExecutor.hpp  GroupMock.hpp  MetaInfoMock.hpp  MockBuilder.hpp  ObservableMock.hpp  ReadableMock.hpp  WritableMock.hpp
includes/Model_Factory/: Device.hpp  DeviceBuilder.hpp  DeviceElement.hpp  DeviceElementBuilder.hpp  DeviceElementGroup.hpp  DeviceElementGroupImpl.hpp  DeviceImpl.hpp  InformationModelExceptions.hpp  NamedElement.hpp
includes/Utilities/: Utils.hpp
includes/infomodel/: blueprint.hpp  device.hpp  deviceElement.hpp  deviceElementGroup.hpp  deviceFunction.hpp  deviceFunctionParameter.hpp  deviceMetric.hpp  namedElement.hpp  valueDataType.hpp
includes/mocks/: DeviceBuilderInterface_MOCK.hpp  DeviceElementGroup_MOCK.hpp  DeviceElement_FAKE.hpp  DeviceMockBuilder.hpp  DeviceMockType.hpp  Device_MOCK.hpp  Function_MOCK.hpp  Metric_MOCK.hpp  ObservableMetric_MOCK.hpp  WritableMetric_MOCK.hpp
includes/utils/: PrintText.hpp
sources/: CMakeLists.txt
sources/Example/: CMakeLists.txt  main.cpp
sources/Information_Model/: CMakeLists.txt  DeviceElementGroupImpl.cpp  informationModelExceptions.cpp
sources/Interface/: CMakeLists.txt  Callable.cpp  DataVariant.cpp  Element.cpp  TODO
sources/Mocks/: CMakeLists.txt  CallableMock.cpp  DeviceMock.cpp  ElementMock.cpp  ExecutorMock.cpp  FakeExecutor.cpp  GroupMock.cpp  MockBuilder.cpp  ObservableMock.cpp  ReadableMock.cpp  WritableMock.cpp
sources/Model_Factory/: CMakeLists.txt  Device.cpp  DeviceBuilder.cpp  DeviceElement.cpp  DeviceElementGroup.cpp  DeviceElementGroupImpl.cpp  DeviceImpl.cpp  InformationModelExceptions.cpp  NamedElement.cpp  NamedElementImpl.cpp
sources/Utilities/: CMakeLists.txt  Utils.cpp
sources/infomodel/: CMakeLists.txt  blueprint.cpp  device.cpp  deviceElement.cpp  deviceElementGroup.cpp  deviceFunction.cpp  deviceFunctionParameter.cpp  deviceMetric.cpp  informationModelExceptions.cpp  namedElement.cpp  observableMetric.cpp  valueDataType.cpp  writeableMetric.cpp
sources/lib/: CMakeLists.txt
sources/runner/: CMakeLists.txt  main.cpp
sources/utils/: CMakeLists.txt  PrintText.cpp
test_package/: CMakeLists.txt  example.cpp
tests/unit_tests/: CMakeLists.txt  DeviceBuilderTests.cpp  DeviceTest.hpp  (+4 more)
tests/unit_tests/Information_Model_Testsuite/: CMakeLists.txt  DeviceElementGroupMock.hpp  DeviceElementGroupTestCases.cpp  DeviceElementGroupTestCases.hpp  DeviceElementTestCases.cpp  DeviceElementTestCases.hpp  DeviceMock.hpp  DeviceTestCases.cpp  DeviceTestCases.hpp  MetricTestCases.cpp  ReadableIntegerTestCases.cpp  TestRunner.cpp  WritableIntegerTestCases.cpp  WritableMetricTestCases.cpp  device_test_cases.hpp  deviceelement_test_cases.hpp  deviceelementgroup_mock.hpp  deviceelementgroup_test_cases.hpp  test_runner.cpp
unit_tests/: CMakeLists.txt
unit_tests/Mock_Tests/: CallableTests.cc  ComparatorTests.cc  DateTimeTests.cc  DeviceElementTests.cc  DeviceMockBuilderTests.cc  DeviceTests.cc  ElementTests.cc  FunctionTests.cc  GeneralComparatorTests.cc  GroupTests.cc  MetaInfoTests.cc  MetricTests.cc  MockBuilderTests.cc  ObservableMetricTests.cc  ObservableTests.cc  ReadableTests.cc  SpecializedComparatorTests.cc  TestElementBuilder.hpp  TestResources.hpp  TestUtils.hpp  WritableMetricTests.cc  WritableTests.cc
unit_tests/Util_Tests/: CallableParamTests.cc  DataVariantTests.cc  TimestampTests.cc
utility/: Doxyfile  checkCodeCoverage.py  runValgrind.py
(+30 files in other folders)
